--- a/public/main.css
+++ b/public/main.css
@@ -54,7 +54,6 @@ h2, .logoDiv {
   align-items: center;
 }
 
-
 .contact {
   height: 200px;
   width: 100vw;
@@ -66,7 +65,6 @@ h2, .logoDiv {
   color: #99CBC8;
   height: 200px;
   width: 100vw;
-  /*text-align: center;*/
   padding-top: 10px;
 }
 
@@ -76,8 +74,26 @@ h2, .logoDiv {
   padding-top: 70px;
 }
 
+.contactForm {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+}
 
+.formDiv {
+  display: flex;
+  justify-content: center;
+}
 
+button {
+  align-self: center;
+  width: 150px;
+  margin-top: 10px;
+  background-color: #252730;
+  color: #FFF;
+  height: 40px;
+  border-radius: 4px;
+}
 
 
 /* Mobile Styles */
