--- a/public/main.css
+++ b/public/main.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 }
 
-
 body {
   display: flex;
   flex-direction: column;
@@ -14,24 +13,47 @@ body {
 .header {
   height: 400px;
   width: 100vw;
-  background-color: #252730;
-}
+  /*background-color: #99CBC8; light blue*/
+  /*background-color: #252730; dark blue */
+  background-image: url('./media/bethjaw-header-dark.png');
+  /*background-image: url('./media/bethjaw-header-light.png');*/
 
-ul {
-  list-style: none;
-  display: flex;
-  justify-content: space-around;
-}
-
-.navItem {
-  color: #99CBC8;
-  padding: 25px;
-}
-
-.namelogo {
   display: flex;
   justify-content: center;
-  padding-top: 75px;
+  align-items: center;
+  flex-direction: column;
+}
+
+.headname {
+  font-family: 'Spicy Rice', cursive;
+  font-size: 48px;
+  /*color: #252730;*/
+  color: #e2dedf;
+}
+
+.subhead {
+  font-size: 22px;
+  color: #99CBC8;
+}
+
+.headericon {
+  width: 40px;
+  margin: 10px;
+}
+
+.icon-contain {
+  display: flex;
+  align-items: baseline;
+  padding: 20px;
+  border-bottom: 2px dashed black;
+}
+
+.iconholder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  margin-top: 20px;
 }
 
 h2, .logoDiv {
@@ -39,24 +61,52 @@ h2, .logoDiv {
   padding-top: 50px;
 }
 
+.main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .intro {
-  height: 400px;
+  height: 200px;
   width: 50%;
   display: flex;
+  justify-content: flex-end;
+  padding-right: 30px;
+}
+
+.bio {
+  height: 200px;
+  width: 50%;
+  display: flex;
+  justify-content: flex-start;
+  padding: 60px 120px 60px 30px;
+}
+
+.title {
+  text-align: center;
+  padding-bottom: 20px;
 }
 
 .work {
-  background-color: lightgrey;
-  height: 400px;
+  /*height: 400px;*/
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.skills {
+  text-align: center;
+}
+
 .contact {
-  height: 200px;
-  width: 100vw;
+  text-align: center;
+  padding: 50px;
+}
+
+.email {
+  margin-bottom: 10px;
 }
 
 .footer {
@@ -74,27 +124,6 @@ h2, .logoDiv {
   padding-top: 70px;
 }
 
-.contactForm {
-  display: flex;
-  flex-direction: column;
-  width: 500px;
-}
-
-.formDiv {
-  display: flex;
-  justify-content: center;
-}
-
-button {
-  align-self: center;
-  width: 150px;
-  margin-top: 10px;
-  background-color: #252730;
-  color: #FFF;
-  height: 40px;
-  border-radius: 4px;
-}
-
 
 /* Mobile Styles */
 @media only screen and (max-width: 400px) {
@@ -106,14 +135,18 @@ button {
  }
 
  .interestings {
-   background-image: url('./media/interestings.png');
+   background-image: url('./media/interestings-dark2.png');
  }
 
  .fable {
-   background-image: url('./media/fableforum.png');
+   background-image: url('./media/fable-light2.png');
  }
 
- .interestings, .fable {
+ .roofstops {
+   background-image: url('./media/roofstops1.png');
+ }
+
+ .interestings, .fable, .roofstops {
    background-repeat: no-repeat;
    background-size: contain;
    width: 350px;
@@ -131,8 +164,8 @@ button {
    align-items: center;
    padding-left: 10px;
    padding-right: 10px;
-   width: 350px;
-   height: 178px;
+   width: 300px;
+   height: 200px;
    background-color: rgba(181, 181, 181, 0.5);
  }
 
@@ -155,22 +188,27 @@ button {
   .work {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
   }
 
   .interestings {
-    background-image: url('./media/interestings.png');
+    background-image: url('./media/interestings-dark2.png');
   }
 
   .fable {
-    background-image: url('./media/fableforum.png');
+    background-image: url('./media/fable-light2.png');
   }
 
-  .interestings, .fable {
+  .roofstops {
+    background-image: url('./media/roofstops1.png');
+  }
+
+  .interestings, .fable, .roofstops {
     background-repeat: no-repeat;
     background-size: contain;
     width: 390px;
     height: 250px;
-    /*border: 2px solid black;*/
+    margin-top: 10px;
   }
 
   .imageoverlay {
@@ -181,8 +219,8 @@ button {
     align-items: center;
     padding-left: 10px;
     padding-right: 10px;
-    width: 390px;
-    height: 198px;
+    width: 376px;
+    height: 250px;
     background-color: rgba(181, 181, 181, 0.5);
   }
 
@@ -201,23 +239,31 @@ button {
 /* Desktop Styles */
 @media only screen and (min-width: 961px) {
 
-  .interestings {
-    background-image: url('./media/interestings.png');
-  }
-
-  .fable {
-    background-image: url('./media/fableforum.png');
-  }
-
-  .interestings, .fable {
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 488px;
-    height: 250px;
+  .work {
     margin: 10px;
   }
 
-  .imageoverlay {
+  .interestings {
+    background-image: url('./media/interestings-dark2.png');
+  }
+
+  .fable {
+    background-image: url('./media/fable-light2.png');
+  }
+
+  .roofstops {
+    background-image: url('./media/roofstops1.png');
+  }
+
+  .interestings, .fable, .roofstops {
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 600px;
+    height: 400px;
+    margin: 10px;
+  }
+
+  .imageoverlay:hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -225,11 +271,18 @@ button {
     align-items: center;
     padding-left: 10px;
     padding-right: 10px;
-    width: 488px;
-    height: 250px;
-    background-color: rgba(181, 181, 181, 0.5);
+    width: 600px;
+    height: 400px;
+    background-color: rgba(181, 181, 181, 0.8);
   }
 
+  /*.hide {
+    visibility: hidden;
+  }
+
+  .hide:hover {
+    visibility: inherit;
+  }*/
 
   .icon {
     width: 40px;
