--- a/public/main.css
+++ b/public/main.css
@@ -24,7 +24,7 @@ h2 {
   /*flex-direction: row;*/
   /*background-color: #99CBC8; light blue*/
   /*background-color: #252730; dark blue */
-  /*background-image: url('./media/bethjaw-header-dark.png');*/
+
 
 }
 
@@ -111,7 +111,8 @@ h2 {
 
 .footer {
   flex: 1 0 auto;
-  background-color: #252730;
+  /*background-color: #252730;*/
+  background-image: url('./media/bethjaw-header-dark.png');
   color: #99CBC8;
   height: 200px;
   width: 100vw;
